--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ table th {
 </audio>
 
   <nav>
-    <img src="logo.png" alt="لوگو" class="logo">
+    <img src="personal_blog_logo_dark_bg.jpg" alt="لوگو" class="logo">
     <div class="menu">
       <a href="#preface">مقدمه</a>
       <a href="#about-me">درباره من</a>
